# PoreAnalyser

./: .gitattributes  .gitignore  Dockerfile  README.md  README.rst  __init__.py  app.py  chimeraX_pore.py  chimera_pore.py  download_files.py  hole_analysis.py  porefinding.py  pymol_pore_visu.py  pyproject.toml  requirements.txt  setup.py  visualization.py
.github/workflows/: docker-publish.yml  python-package.yml  python-publish.yml
PoreAnalyser/: __init__.py  conductance.py  download_files.py  poreanalyser.py  porefinder.py  visualization.py
PoreAnalyser/pdb_models/: 7tu9_aligned_z.pdb_pathway_ellipse.txt  7tvi_aligned_z.pdb_pathway_ellipse.txt  8fe1_aligned_z.pdb_pathway_ellipse.txt  8fe1_aligned_z.s
PoreAnalyser/tests/: test_conductance.py  test_ellipse.py  test_ellipsoid_optimisation.py  test_hole.py
PoreFinder/: __init__.py
PoreFinder/ProbeParticleEllipsoid/: ellipse_lib.py  ellipsoid_optimisation.py
PoreFinder/pdb_models/: test_7tu9_aligned_z.sph
PoreFinder/tests/: test_ellipsoid_optimisation.py  test_hole.py
PoreFinding/: __init__.py  download_files.py  hole_analysis.py  porefinding.py  visualization.py
PoreFinding/ProbeParticleEllipsoid/: ellipse_lib.py
PoreFinding/hole2/: hole  sos_triangle  sph_process
PoreFinding/pdb_models/: 7tu9_aligned_z.pdb_pathway_ellipse.vmd  7tu9_aligned_z.pdb_pathway_ellipse_parallel2 (copy).txt  7tu9_aligned_z.sph  7tu9_aligned_z.sph.old  7tu9_aligned_z.vmd  7tu9a_aligned_z.sph
PoreFinding/tests/: test_ellipsoid_optimisation.py  test_hole.py
ProbeParticleEllipsoid/: ellipse_lib.py  ellipsoid_optimisation.py
docs/: Makefile  conf.py  make.bat  nuances.rst  requirements.txt
docs/source/: api.rst  conductance.rst  conf.py  index.rst  usage.rst  visualisation.rst  webservice.rst
hole2/: hole
pdb_models/: .nfs00000000192d88360000088e
tests/: __init__.py  test_ellipse.py  test_ellipsoid_optimisation.py  test_hole.py  test_visualization.py
visualisation_script/: visualise_pathway_hole.tcl
