[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "PoreFinding"
authors = [{name = "David Seiferth", email = "david.seiferth@oriel.ox.ac.uk"}]
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}
description = "PoreFinding package based on HOLE and MDAnalysis"
version = "0.0.1"
requires-python = ">=3.6"

[project.scripts]
porefinding = "porefinding:main"

[tool.flit.sdist]
include = ["LICENSE"]


