[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "PoreAnalyser"
authors = [{name = "David Seiferth", email = "david.seiferth@oriel.ox.ac.uk"}]
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}
description = "PoreAnalyser package based on HOLE and MDAnalysis"
version = "0.0.7"
requires-python = ">=3.6"
dependencies = [
#python<=3.11,
'numpy >=1.0, <1.23.0',
'MDAnalysis >=2.0, <3.0',
'matplotlib>=0.1',
'pandas>=1.3',
'streamlit>=1.0',
'stmol==0.0.9',
'py3Dmol',
'ipyspeck==0.6.1',
'ipywidgets==7.6.3',
'scipy',
'altair<5',
'nglview',
'ipython_genutils==0.2.0',
]

[project.scripts]
poreanalyser = "poreanalyser:main"

[tool.flit.sdist]
include = ["LICENSE", "requirements.txt"]



